# HalfMarathonCpp

Race00/: snake
Race00/app/: CMakeLists.txt  main.cpp
Sprint00 /t00/: CMakeLists.txt
Sprint00 /t02/: walletManager.cpp
Sprint00 /t03/: castSpells.cpp
Sprint00 /t04/: referenceOrPointter.cpp
Sprint00 /t05/: CMakeLists.txt  main.cpp
Sprint00 /t06/: main.cpp  meadSong.h
Sprint00 /t07/: CMakeLists.txt  main.cpp
Sprint00 /t07/src/: commands.cpp  header.h  valid.cpp
Sprint00/t00/: helloTamriel.cpp
Sprint00/t02/: walletManager.cpp  walletManager.h
Sprint00/t04/: referenceOrPointter.cpp
Sprint00/t05/: automaton
Sprint00/t06/: CMakeLists.txt  main.cpp  meadSong  meadSong.cpp
Sprint00/t07/: inventory  main.cpp
Sprint01/t00/: CMakeLists.txt  main.cpp  simpleSort
Sprint01/t01/: CMakeLists.txt  main.cpp  moveAlong
Sprint01/t02/: CMakeLists.txt  main.cpp  visitAll
Sprint01/t03/: CMakeLists.txt  main.cpp
Sprint01/t04/: CMakeLists.txt  main.cpp  stdAlgoV1
Sprint01/t05/: CMakeLists.txt  file  main.cpp  stdAlgoV2
Sprint02/t00/: CMakeLists.txt  main.cpp
Sprint02/t01/: CMakeLists.txt  main.cpp
Sprint02/t02/: CMakeLists.txt  main.cpp
Sprint02/t03/: CMakeLists.txt  main.cpp
Sprint03/t00/: templateAddition.h
Sprint03/t01/: outputAny.h
Sprint03/t02/: sumOfArguments.h
Sprint03/t03/: sumFileData.h
Sprint03/t04/: outputContainer.h
Sprint03/t05/: squareValue.h
Sprint03/t06/: isPalindrome.h
Sprint03/t07/: sortValues.h
Sprint04/t02/: CMakeLists.txt
Sprint04/t03/: CMakeLists.txt
Sprint05/: .gitignore
Sprint05/t00/: CMakeLists.txt
(+124 files in other folders)
